# Clinical-Note-Quality-App

./: .env.example  .env.fixed  .env.new  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Claude.md  Clinical Note Quality Grader – Project Overview.md  NARRATIVE_EXPLANATIONS_PLAN.md  PHASE1_DETAILED_PLAN.md  PHASE2_DETAILED_PLAN.md  README.md  REFACTOR_PLAN.md  RELEASE_NOTES_v2.0.0.md  WEEK2_IMPLEMENTATION_COMPLETE.py  app.py  check_fixes.py  config.py  debug_data_structure.py  diagnose.py  final_check.py  pdr.md  pyproject.toml  requirements.txt  run_dev.sh  run_diagnostics.bat  run_o3_tests.bat  run_o3_tests.ps1  run_tests.sh  sample_note.md  setup.sh  simple_test_week2.py  start_app.bat  test_character_counter.html  to_remove.txt  update_scoring.py  validate_fix.py  validate_week1.py  validate_week2_green.py  verify_scoring_format.py  (+5 more)
.github/workflows/: ci.yml
agents/: __init__.py  citations_agent.py  constants.py  memory_agent.py  orchestrator.py  ring_agent.py
clinical_note_quality/: __init__.py  cli.py  observability.py  settings.py
clinical_note_quality/adapters/: __init__.py
clinical_note_quality/domain/: __init__.py  exceptions.py  models.py  semantic_models.py
docs/: README.md
grading/: __init__.py  exceptions.py  factuality.py  heuristics.py  hybrid.py  nine_rings.py  o3_judge.py
templates/: base.html  index.html  result.html  results_partial.html
tests/: conftest.py  test_app_routes.py  test_async_grading_service.py  test_factuality.py  test_heuristics.py  test_hybrid.py  test_o3_judge.py  test_observability.py
(+17 files in other folders)
