[project]
name = "clinical-note-quality"
version = "0.1.0"
description = "Clinical Note Quality Grader"
authors = [{ name = "VHA STC" }]
requires-python = ">=3.12"

# Runtime (prod) dependencies live in legacy requirements.txt; keep minimal here for tooling.

[project.optional-dependencies]
dev = [
    "black>=24.4,<25",
    "ruff>=0.4.4,<0.5",
    "mypy>=1.10,<2",
    "pytest>=7.4",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["ALL"]
# Disable rules that conflict with current code or will be fixed later
ignore = [
    "D203",  # one-blank-line-before-class
    "D212",  # multi-line-summary-second-line
    "BLE001",  # blind except
    "ANN101", "ANN102", "ANN003", "ANN002",  # missing type-args etc.
    "S101",  # asserts used
]
exclude = ["venv", ".venv", ".git"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
show_error_codes = true
namespace_packages = true

[tool.pytest.ini_options]
addopts = "-q"
python_files = "tests/*.py" 